--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="container">
 		<h1>Coronavirus Tracker Application</h1>
-		<p>This app lists the current number of cases reported across the
+		<p>This application lists the current number of cases reported across the
 			globe</p>
 
 		<div class="jumbotron">
