--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -5,27 +5,55 @@
 <head>
 <title>Coronavirus Tracker Application</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<style>
+#grad1 {
+  height: 300px;
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); /* Standard syntax (must be last) */
+}
+#grad2{
+height: 300px;
+  background-image: linear-gradient(blue, cyan);
+}
+#grad3{
+height: 300px;
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
+}
+/* #body { */
+/* 	background: */
+/* 		url("http://dcmsme.gov.in/Awareness_corona/covid-19-banner.jpg") */
+/* 		no-repeat scroll 0 0 #fff; */
+/* } */
+tr:hover {
+	background-color: #f5f5f5;
+}
+</style>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 	crossorigin="anonymous">
 </link>
+
 </head>
 
 <body>
-	<div class="container">
+
+	<!-- <img src="covid19.jpg" style="width:100%;"/> -->
+	<div class="container" id="grad3">
 		<h1>COVID19 Tracker Application</h1>
 		<p>
 			This application lists the current number of cases reported across <b>INDIA</b>
 		</p>
 		<p>
-			<b><a href='/tracker'> CLICK ON TO VIEW COVID19
-					GLOBAL DATA</a></b>
+			<b><a href='/tracker'> CLICK ON TO VIEW COVID19 GLOBAL DATA</a></b>
 		</p>
-		<div class="jumbotron">
-			<h1 class="display-4" th:text="${totalReportedCases}"></h1>
+		<div class="jumbotron" id="grad2">
+			<h2 class="display-20" th:text="${totalReportedCases}"></h2>
 			<p class="lead">Total cases reported as of today</p>
 			<hr class="my-4">
+			<p>
+				<span>Total active cases as of today</span> <b><span
+					th:text="${activeCases}"></span></b>
+			</p>
 			<p>
 				<span>Total cases discharged as of today</span> <b><span
 					th:text="${dischargedCases}"></span></b>
@@ -36,8 +64,7 @@
 			</p>
 			</hr>
 		</div>
-
-		<table class="table">
+		<table class="table" id="grad1">
 			<tr>
 				<th>Serial No</th>
 				<th>State</th>
