--- a/src/main/resources/templates/global.html
+++ b/src/main/resources/templates/global.html
@@ -3,8 +3,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<title>Coronavirus Tracker Application</title>
+<title><p>Coronavirus Tracker Application</p></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<style>
+#grad1 {
+  height: 300px;
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)); /* Standard syntax (must be last) */
+}
+#grad2{
+height: 300px;
+  background-image: linear-gradient(blue, cyan);
+}
+#grad3{
+height: 300px;
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
+}
+tr:hover {
+	background-color: #f5f5f5;
+}
+</style>
+
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -13,7 +31,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container" id="grad3">
 		<h1>COVID19 Tracker Application</h1>
 		<p>This application lists the current number of cases reported across the
 			<b>GLOBE</b></p>
@@ -21,7 +39,7 @@
 <!-- 		TO VIEW COVID19 DATA INDIA</b></p> -->
 		<p><b><a href='/tracker/countryWise'>
 		CLICK ON TO VIEW COVID19 INDIA DATA</a></b></p>
-		<div class="jumbotron">
+		<div class="jumbotron" id="grad2">
 			<h1 class="display-4" th:text="${totalReportedCases}"></h1>
 			<p class="lead">Total cases reported as of today</p>
 			<hr class="my-4">
@@ -36,7 +54,7 @@
 			</hr>
 		</div>
 
-		<table class="table">
+		<table class="table" id="grad1">
 			<tr>
 				<th>State</th>
 				<th>Country</th>
